--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Práctica 2 de PAI",
+  "name": "Práctica 4 de PAI",
   "version": "1.0.0",
-  "description": "Introduction to JS",
+  "description": "Introducción a TS. Unit Testing con Jest. Documentación con TypeDoc",
   "private": true,
   "main": "index.js",
   "scripts": {
@@ -17,7 +17,19 @@
   "author": "F. de Sande <fsande@ull.es>",
   "license": "MIT",
   "devDependencies": {
-    "readline-sync": "1.4.9",
-    "eslint": "^8.33.0"
+    "@exercism/babel-preset-typescript": "^0.1.0",
+    "@exercism/eslint-config-typescript": "^0.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "babel-jest": "^27.5.1",
+    "core-js": "^3.21.0",
+    "eslint": "^8.33.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.4.3",
+    "tsc-watch": "^6.0.0",
+    "typedoc": "^0.23.25",
+    "typescript": "^4.9.5"
   }
 }
